more fixes to FindBugs warnings